Adding Google API

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="google-signin-client_id" content="240856805287-krto28iv2k18f1tclc00l9ub6nhbsaud.apps.googleusercontent.com">
   
   <link href="https://s3.amazonaws.com/codiqa-cdn/codiqa.ext.css" rel="stylesheet">
   <link href="https://s3.amazonaws.com/codiqa-cdn/mobile/1.4.2/jquery.mobile-1.4.2.css" rel="stylesheet">
@@ -16,6 +17,8 @@
   <script src="https://s3.amazonaws.com/codiqa-cdn/codiqa.ext.js"></script>
   <script src="theme.css"></script>
   <script src="script.js"></script>
+  
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   
 </head>
 <body>
@@ -48,6 +51,7 @@
         <div class="ui-field-contain" data-controltype="textinput">
             <input name="" id="textinput10" placeholder="" value="Username" type="text">
         </div>
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
         <div class="ui-field-contain" data-controltype="textinput">
             <input name="" id="textinput13" placeholder="" value="Password" type="text">
         </div>
