--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         data-controltype="image">
             <img src="https://codiqa.com/static/images/v2/image.png" alt="image" style="position: absolute; top: 50%; left: 50%; margin-left: -16px; margin-top: -18px">
         </div>
+        <div class="ui-field-contain" data-controltype="textinput">
+            <input name="" id="textinput10" placeholder="" value="Username" type="text">
+        </div>
+        <div class="ui-field-contain" data-controltype="textinput">
+            <input name="" id="textinput13" placeholder="" value="Password" type="text">
+        </div>
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
         <a href="#home" class="ui-btn ">
             Submit
