Landing Page added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
   
 </head>
 <body>
+<!-- New Landing Page -->
+<div data-role="page" data-control-title="Landing" id="landing">
+	<div data-role="header" data-theme="c">
+	<h1> CONNECTIONS </h1>
+	</div>
+	<div role="main" class="ui-content">
+		<h2 class="mc-text-center">Welcome!</h2>
+		<p class="mc-top-margin-1-5"><b>Existing Users</b></p>
+		<a href="#signin" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
+		<p class="mc-top-margin-1-5"><b>Don't have an account?</b></p>
+		<a href="#signin" class="ui-btn ui-btn-b ui-corner-all">Sign Up</a>
+		<p></p>
+	</div>
+</div>
 <!-- Login Page -->
 <div data-role="page" data-control-title="Login" id="login">
     <div data-theme="a" data-role="header">
@@ -54,6 +68,7 @@
         <div class="ui-field-contain" data-controltype="textinput">
             <input name="" id="textinput13" placeholder="" value="Password" type="text">
         </div>
+        <!-- sign in with google-->
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
         <a href="#home" class="ui-btn ">
             Submit
