--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 	<div role="main" class="ui-content">
 		<h2 class="mc-text-center">Welcome!</h2>
 		<p class="mc-top-margin-1-5"><b>Existing Users</b></p>
-		<a href="#signin" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
+		<!-- sign in button -->
+		<a href="#login" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
 		<p class="mc-top-margin-1-5"><b>Don't have an account?</b></p>
+		<!-- sign up button -->
 		<a href="#signin" class="ui-btn ui-btn-b ui-corner-all">Sign Up</a>
 		<p></p>
 	</div>
@@ -42,12 +44,24 @@
     <h1>CONNECTIONS</h1>
     </div>
     <div role="main" class="ui-content">
-        <div data-controltype="image">
-            <img src="Connections.png" alt="image">
-        </div>
-        <a href="#signin" class="ui-btn ">
-            Login
-        </a>
+            <h3>Sign In</h3>
+            <label for="txt-email">Email Address</label>
+            <input type="text" name="txt-email" id="txt-email" value="">
+            <label for="txt-password">Password</label>
+            <input type="password" name="txt-password" id="txt-password" value="">
+            <fieldset data-role="controlgroup">
+            <input type="checkbox" name="chck-rememberme" id="chck-rememberme" checked="">
+            <label for="chck-rememberme">Remember me</label>
+            </fieldset>
+            <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+            <p class="mc-top-margin-1-5"><a href="begin-password-reset.html">Can't access your account?</a></p>
+            <div data-role="popup" id="dlg-invalid-credentials" data-dismissible="false" style="max-width:400px;">
+            <div role="main" class="ui-content">
+            <h3 class="mc-text-danger">Login Failed</h3>
+            <p>Did you enter the right credentials?</p>
+            <div class="mc-text-center"><a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+                </div>
+            </div>
     </div>
 </div>
 <!-- Signin -->
