--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<a href="#login" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
 		<p class="mc-top-margin-1-5"><b>Don't have an account?</b></p>
 		<!-- sign up button -->
-		<a href="#signin" class="ui-btn ui-btn-b ui-corner-all">Sign Up</a>
+		<a href="#login" class="ui-btn ui-btn-b ui-corner-all">Sign Up</a>
 		<p></p>
 	</div>
 </div>
