--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<a href="#login" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
 		<p class="mc-top-margin-1-5"><b>Don't have an account?</b></p>
 		<!-- sign up button -->
-		<a href="#login" class="ui-btn ui-btn-b ui-corner-all">Sign Up</a>
+		<a href="#signup" class="ui-btn ui-btn-b ui-corner-all">Sign Up</a>
 		<p></p>
 	</div>
 </div>
@@ -58,35 +58,42 @@
             <div data-role="popup" id="dlg-invalid-credentials" data-dismissible="false" style="max-width:400px;">
             <div role="main" class="ui-content">
             <h3 class="mc-text-danger">Login Failed</h3>
-            <p>Did you enter the right credentials?</p>
+            <p>Sorry, incorrect username or password.</p>
             <div class="mc-text-center"><a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
                 </div>
             </div>
     </div>
 </div>
-<!-- Signin -->
-<div data-role="page" data-control-title="Sign In" id="signin">
+<!-- Signup -->
+<div data-role="page" data-control-title="Sign In" id="signup">
     <div data-theme="a" data-role="header">
         <h1>
             CONNECTIONS
         </h1>
     </div>
     <div role="main" class="ui-content">
-        <div style="width: 288px; height: 200px; position: relative; background-color: #fbfbfb; border: 1px solid #b8b8b8;"
-        data-controltype="image">
-            <img src="https://codiqa.com/static/images/v2/image.png" alt="image" style="position: absolute; top: 50%; left: 50%; margin-left: -16px; margin-top: -18px">
+<h3>Sign Up</h3>
+        <label for="txt-first-name">First Name</label>
+        <input type="text" name="txt-first-name" id="txt-first-name" value="">
+        <label for="txt-last-name">Last Name</label>
+        <input type="text" name="txt-last-name" id="txt-last-name" value="">
+        <label for="txt-email">Email Address</label>
+        <input type="text" name="txt-email" id="txt-email" value="">
+        <label for="txt-password">Password</label>
+        <input type="password" name="txt-password" id="txt-password" value="">
+        <label for="txt-password-confirm">Confirm Password</label>
+        <input type="password" name="txt-password-confirm" id="txt-password-confirm" value="">
+        <a href="#dlg-sign-up-sent" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+        <div data-role="popup" id="dlg-sign-up-sent" data-dismissible="false" style="max-width:400px;">
+            <div data-role="header">
+                <h1>Almost done...</h1>
+            </div>
+            <div role="main" class="ui-content">
+                <h3>Confirm Your Email Address</h3>
+                <p>We sent you an email with instructions on how to confirm your email address. Please check your inbox and follow the instructions in the email.</p>
+                <div class="mc-text-center"><a href="sign-in.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+            </div>
         </div>
-        <div class="ui-field-contain" data-controltype="textinput">
-            <input name="" id="textinput10" placeholder="" value="Username" type="text">
-        </div>
-        <div class="ui-field-contain" data-controltype="textinput">
-            <input name="" id="textinput13" placeholder="" value="Password" type="text">
-        </div>
-        <!-- sign in with google-->
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        <a href="#home" class="ui-btn ">
-            Submit
-        </a>
     </div>
 </div>
 <!-- Home -->
