Sign up linked with login

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div role="main" class="ui-content">
                 <h3>Confirm Your Email Address</h3>
                 <p>We sent you an email with instructions on how to confirm your email address. Please check your inbox and follow the instructions in the email.</p>
-                <div class="mc-text-center"><a href="sign-in.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+                <div class="mc-text-center"><a href="#login" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
             </div>
         </div>
     </div>
