--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <label for="chck-rememberme">Remember me</label>
             </fieldset>
             <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
-            <p class="mc-top-margin-1-5"><a href="begin-password-reset.html">Can't access your account?</a></p>
+            <p class="mc-top-margin-1-5"><a href="endpwreset">Can't access your account?</a></p>
             <div data-role="popup" id="dlg-invalid-credentials" data-dismissible="false" style="max-width:400px;">
             <div role="main" class="ui-content">
             <h3 class="mc-text-danger">Login Failed</h3>
@@ -113,7 +113,7 @@
                 <div role="main" class="ui-content">
                     <h3>Check Your Inbox</h3>
                     <p>We sent you an email with instructions on how to reset your password. Please check your inbox and follow the instructions in the email.</p>
-                    <div class="mc-text-center"><a href="end-password-reset.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+                    <div class="mc-text-center"><a href="#endpwreset" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
                 </div>
             </div>
 </div>
