Some errors fixed.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 </div>
             </div>
 </div>
+</div>
 <!--End Password Reset-->
 <div data-role="page" data-control-title="End Password Reset" id="endpwreset">
 	<div data theme="a" data-role="header">
