--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="google-signin-client_id" content="240856805287-krto28iv2k18f1tclc00l9ub6nhbsaud.apps.googleusercontent.com">
-  
+    
   <link href="https://s3.amazonaws.com/codiqa-cdn/codiqa.ext.css" rel="stylesheet">
   <link href="https://s3.amazonaws.com/codiqa-cdn/mobile/1.4.2/jquery.mobile-1.4.2.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -17,9 +16,7 @@
   <script src="https://s3.amazonaws.com/codiqa-cdn/codiqa.ext.js"></script>
   <script src="theme.css"></script>
   <script src="script.js"></script>
-  
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  
+    
 </head>
 <body>
 <!-- New Landing Page -->
@@ -182,8 +179,8 @@
     <div data-role="tabbar" data-iconpos="top" data-theme="a">
         <ul>
             <li>
-                <a href="#home" data-transition="fade" data-theme="" data-icon="bars">
-                    More
+                <a href="#home" data-transition="fade" data-theme="" data-icon="home">
+                    Home
                 </a>
             </li>
             <li>
