--- a/index.html
+++ b/index.html
@@ -19,44 +19,126 @@
     
 </head>
 <body>
-<!-- Login pages insert here -->
+<!-- New Landing Page -->
+<div data-role="page" data-control-title="Landing" id="landing">
+	<div data-role="header" data-theme="c">
+	<h1> Connections </h1>
+	</div>
+	<div role="main" class="ui-content">
+		<h2 class="mc-text-center">Welcome!</h2>
+		<p class="mc-top-margin-1-5"><b>Existing Users</b></p>
+		<!-- sign in button -->
+		<a href="#login" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
+		<p class="mc-top-margin-1-5"><b>Don't have an account?</b></p>
+		<!-- sign up button -->
+		<a href="#signup" class="ui-btn ui-btn-b ui-corner-all">Sign Up</a>
+		<p></p>
+	</div>
+</div>
 <!-- Login Page -->
 <div data-role="page" data-control-title="Login" id="login">
     <div data-theme="a" data-role="header">
     <h1>CONNECTIONS</h1>
     </div>
     <div role="main" class="ui-content">
-        <div data-controltype="image">
-            <img src="Connections.png" alt="image">
-        </div>
-        <a href="#signin" class="ui-btn ">
-            Login
-        </a>
+            <h3>Sign In</h3>
+            <label for="txt-email">Email Address</label>
+            <input type="text" name="txt-email" id="txt-email" value="">
+            <label for="txt-password">Password</label>
+            <input type="password" name="txt-password" id="txt-password" value="">
+            <fieldset data-role="controlgroup">
+            <input type="checkbox" name="chck-rememberme" id="chck-rememberme" checked="">
+            <label for="chck-rememberme">Remember me</label>
+            </fieldset>
+            <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+            <p class="mc-top-margin-1-5"><a href="#pwreset">Can't access your account?</a></p>
+            <div data-role="popup" id="dlg-invalid-credentials" data-dismissible="false" style="max-width:400px;">
+            <div role="main" class="ui-content">
+            <h3 class="mc-text-danger">Login Failed</h3>
+            <p>Sorry, incorrect username or password.</p>
+            <div class="mc-text-center"><a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+                </div>
+            </div>
     </div>
 </div>
-<!-- Signin -->
-<div data-role="page" data-control-title="Sign In" id="signin">
+<!-- Signup -->
+<div data-role="page" data-control-title="Sign In" id="signup">
     <div data-theme="a" data-role="header">
         <h1>
             CONNECTIONS
         </h1>
     </div>
     <div role="main" class="ui-content">
-        <div style="width: 288px; height: 200px; position: relative; background-color: #fbfbfb; border: 1px solid #b8b8b8;"
-        data-controltype="image">
-            <img src="https://codiqa.com/static/images/v2/image.png" alt="image" style="position: absolute; top: 50%; left: 50%; margin-left: -16px; margin-top: -18px">
+<h3>Sign Up</h3>
+        <label for="txt-first-name">First Name</label>
+        <input type="text" name="txt-first-name" id="txt-first-name" value="">
+        <label for="txt-last-name">Last Name</label>
+        <input type="text" name="txt-last-name" id="txt-last-name" value="">
+        <label for="txt-email">Email Address</label>
+        <input type="text" name="txt-email" id="txt-email" value="">
+        <label for="txt-password">Password</label>
+        <input type="password" name="txt-password" id="txt-password" value="">
+        <label for="txt-password-confirm">Confirm Password</label>
+        <input type="password" name="txt-password-confirm" id="txt-password-confirm" value="">
+        <a href="#dlg-sign-up-sent" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+        <div data-role="popup" id="dlg-sign-up-sent" data-dismissible="false" style="max-width:400px;">
+            <div data-role="header">
+                <h1>Almost done...</h1>
+            </div>
+            <div role="main" class="ui-content">
+                <h3>Confirm Your Email Address</h3>
+                <p>We sent you an email with instructions on how to confirm your email address. Please check your inbox and follow the instructions in the email.</p>
+                <div class="mc-text-center"><a href="#login" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+            </div>
         </div>
-        <div class="ui-field-contain" data-controltype="textinput">
-            <input name="" id="textinput10" placeholder="" value="Username" type="text">
-        </div>
-        <div class="ui-field-contain" data-controltype="textinput">
-            <input name="" id="textinput13" placeholder="" value="Password" type="text">
-        </div>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        <a href="#home" class="ui-btn ">
-            Submit
-        </a>
     </div>
+</div>
+<!-- Password Reset -->
+<div data-role="page" data-control-title="Password Reset" id="pwreset">
+	<div data theme="a" data-role="header">
+	<h1> CONNECTIONS</h1>
+	</div>
+	<div role="main" class="ui-content">
+	<h3>Password Reset</h3>
+            <label for="txt-email">Enter your email address</label>
+            <input type="text" name="txt-email" id="txt-email" value="">
+            <a href="#dlg-pwd-reset-sent" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+            <div data-role="popup" id="dlg-pwd-reset-sent" data-dismissible="false" style="max-width:400px;">
+                <div data-role="header">
+                    <h1>Password Reset</h1>
+                </div>
+                <div role="main" class="ui-content">
+                    <h3>Check Your Inbox</h3>
+                    <p>We sent you an email with instructions on how to reset your password. Please check your inbox and follow the instructions in the email.</p>
+                    <div class="mc-text-center"><a href="#endpwreset" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+                </div>
+            </div>
+</div>
+</div>
+<!--End Password Reset-->
+<div data-role="page" data-control-title="End Password Reset" id="endpwreset">
+	<div data theme="a" data-role="header">
+	<h1> CONNECTIONS</h1>
+	</div>
+	<div role="main" class="ui-content">
+	<h3>Reset Password</h3>
+            <label for="txt-tmp-password">Provisional Password</label>
+            <input type="password" name="txt-tmp-password" id="txt-tmp-password" value="">
+            <label for="txt-new-password">New Password</label>
+            <input type="password" name="txt-new-password" id="txt-new-password" value="">
+            <label for="txt-new-password-confirm">Confirm New Password</label>
+            <input type="password" name="txt-new-password-confirm" id="txt-new-password-confirm" value="">
+            <a href="#dlg-pwd-changed" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+            <div data-role="popup" id="dlg-pwd-changed" data-dismissible="false" style="max-width:400px;">
+                <div data-role="header">
+                    <h1>Done</h1>
+                </div>
+                <div role="main" class="ui-content">
+                    <p>Your password was changed.</p>
+                    <div class="mc-text-center"><a href="#login" class="ui-btn ui-corner-all ui-shadow ui-btn-b mc-top-margin-1-5">OK</a></div>
+                </div>
+            </div>
+	</div>
 </div>
 <!-- Home -->
 <div data-role="page" data-control-title="Home" id="home">
@@ -65,11 +147,35 @@
             CONNECTIONS
         </h1>
     </div>
-	<div class = "contact-list" id="added">
-		<div class="person">
-		<div class="name">Sample Name</div>
-		</div>
-	</div>	
+    <div role="main" class="ui-content">
+        <ul data-role="listview" id ="contactList" data-divider-theme="a" data-inset="true" data-filter="true" data-filter-placeholder="Search Contacts List..." data-autodividers="true">
+            <li data-theme="a">
+                <a href="#history" data-transition="slide">
+                    Asia Burell
+                </a>
+            </li>
+            <li data-theme="a">
+                <a href="#history" data-transition="slide">
+                    Jay Wong
+                </a>
+            </li>
+            <li data-theme="a">
+                <a href="#history" data-transition="slide">
+                    Tiffany Xiao
+                </a>
+            </li>
+            <li data-theme="a">
+                <a href="#history" data-transition="slide">
+                    Victoria Tan
+                </a>
+            </li>
+            <li data-theme="a">
+                <a href="#history" data-transition="slide">
+                    Wilson Chen
+                </a>
+            </li>           
+        </ul>
+    </div>
     <div data-role="tabbar" data-iconpos="top" data-theme="a">
         <ul>
             <li>
@@ -97,16 +203,35 @@
             CONNECTIONS
         </h1>
     </div>
-    <!-- the content starts here -->
     <div role="main" class="ui-content">
-        <h1>Add a contact</h1>
-        <form id="contact-form">
-        	<input type="text" placeholder="Name" />
-        	<input type="text" placeholder="Phone"/>
-        	<input type="text" placeholder="Email"/>
-        	<textarea placeholder="Description"></textarea>
-        	<input type="button" class="btn btn-primary" value="Add Contact">
-        </form>	
+        <div class="ui-field-contain" data-controltype="camerainput">
+            <label for="camerainput1">
+                Image:
+            </label>
+            <input type="file" name="Profile" id="camerainput1" accept="image/*" capture="camera">
+        </div>
+        <div class="ui-field-contain" data-controltype="textinput">
+            <label for="textinput1">
+                Name:
+            </label>
+            <input name="" id="textinput1" placeholder="" value="Type Contact Name Here"
+            type="text">
+        </div>
+        <div class="ui-field-contain" data-controltype="textinput">
+            <label for="textinput2">
+                Phone:
+            </label>
+            <input name="" id="textinput2" placeholder="" value="Optional" type="tel">
+        </div>
+        <div class="ui-field-contain" data-controltype="textinput">
+            <label for="textinput5">
+                Email:
+            </label>
+            <input name="" id="textinput5" placeholder="" value="Optional" type="email">
+        </div>
+		<a href="#home" class="ui-btn " onclick="addContact()">
+            Submit
+        </a>
     </div>
 </div>
 <!-- History -->
