--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- New Landing Page -->
 <div data-role="page" data-control-title="Landing" id="landing">
 	<div data-role="header" data-theme="c">
-	<h1> Connections </h1>
+	<h1> CONNECTIONS </h1>
 	</div>
 	<div role="main" class="ui-content">
 		<h2 class="mc-text-center">Welcome!</h2>
