--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <ul data-role="listview" id ="contactList" data-divider-theme="a" data-inset="true" data-filter="true" data-filter-placeholder="Search Contacts List..." data-autodividers="true">
             <li data-theme="a">
                 <a href="#history" data-transition="slide">
-                    Asia Burell
+                    Asia Burrell
                 </a>
             </li>
             <li data-theme="a">
