--- a/index.html
+++ b/index.html
@@ -235,11 +235,7 @@
     </div>
 </div>
 <!-- History -->
-<div data-role="page" data-control-title="Home" id="history">
-    <div role="main" class="ui-content">
-    </div>
-</div>
-<div data-role="page" data-control-title="History" id="page2">
+<div data-role="page" data-control-title="History" id="history">
     <div data-theme="a" data-role="header">
         <h1 class="ui-title">
             CONNECTIONS
