--- a/index.html
+++ b/index.html
@@ -212,22 +212,29 @@
         </div>
         <div class="ui-field-contain" data-controltype="textinput">
             <label for="textinput1">
-                Name:
+                First Name:
             </label>
-            <input name="" id="textinput1" placeholder="" value="Type Contact Name Here"
+            <input name="" id="textinput1" placeholder="" placeholder="Type First Name Here"
+            type="text">
+        </div>
+        <div class="ui-field-contain" data-controltype="textinput">
+            <label for="textinput6">
+                Last Name:
+            </label>
+            <input name="" id="textinput6" placeholder="" placeholder="Type Last Name Here"
             type="text">
         </div>
         <div class="ui-field-contain" data-controltype="textinput">
             <label for="textinput2">
                 Phone:
             </label>
-            <input name="" id="textinput2" placeholder="" value="Optional" type="tel">
+            <input name="" id="textinput2" placeholder="" placeholder="Phone" type="tel">
         </div>
         <div class="ui-field-contain" data-controltype="textinput">
             <label for="textinput5">
                 Email:
             </label>
-            <input name="" id="textinput5" placeholder="" value="Optional" type="email">
+            <input name="" id="textinput5" placeholder="" placeholder="Email" type="email">
         </div>
 		<a href="#home" class="ui-btn" onclick="addContact()">
             Submit
