--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <script src="https://s3.amazonaws.com/codiqa-cdn/codiqa.ext.js"></script>
   <script src="theme.css"></script>
   <script src="script.js"></script>
+
+<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     
 </head>
 <body id="pages">
