About page added

--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
     <div data-role="tabbar" data-iconpos="top" data-theme="a">
         <ul>
             <li>
-                <a href="#home" data-transition="fade" data-theme="" data-icon="home">
-                    Home
+                <a href="#about" data-transition="fade" data-theme="" data-icon="info">
+                    About
                 </a>
             </li>
             <li>
-                <a href="#" data-transition="fade" data-theme="" data-icon="edit">
-                    Edit
+                <a href="#home" data-transition="fade" data-theme="" data-icon="home">
+                    Home
                 </a>
             </li>
             <li>
@@ -310,6 +310,200 @@
             <input name="" id="dateinput2" placeholder="" value="" type="date">
         </div>
         <input type="submit" value="Submit">
+    </div>
+</div>
+<!--About page-->
+<div data-role="page" data-control-title="About" id="about">
+    <div data-theme="a" data-role="header">
+        <h1 class="ui-title">
+            CONNECTIONS
+        </h1>
+    </div>
+    <div role="main" class="ui-content">
+        <a href="#page4" data-icon="star" data-iconpos="left" class="ui-btn ui-btn-c ui-icon-star ui-btn-icon-left">
+            Tutorial
+        </a>
+        <div data-controltype="textblock">
+            <p>
+                <strong>
+                    <span style="text-decoration: underline;" data-mce-style="text-decoration: underline;">
+                        <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                            About Connections:
+                        </span>
+                    </span>
+                </strong>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    Connections is a JQUERY Mobile app created by Tiffany Xiao and Asia Burrell.
+                    It is meant to keep track of the various ways you communicate with people
+                    a.k.a. your "connections".&nbsp;
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    In an age where communication is happening faster and more often than
+                    ever, connection serves &nbsp;to help the user remember what they've last
+                    done with a person.
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    <br>
+                </span>
+            </p>
+            <p>
+                <strong>
+                    <span style="text-decoration: underline;" data-mce-style="text-decoration: underline;">
+                        <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                            About the Creators:
+                        </span>
+                    </span>
+                </strong>
+            </p>
+            <p>
+                <strong>
+                    <span style="text-decoration: underline;" data-mce-style="text-decoration: underline;">
+                        <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                            Tiffany Xiao:&nbsp;
+                        </span>
+                    </span>
+                </strong>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    Tiffany Xiao, 16, a city girl from a small lively neighborhood in Brooklyn,
+                    studies engineering at the very diverse Brooklyn Technical High School
+                    while also balancing hanging out with friends, community work and adventurous
+                    reading. Since she was only ten, she has always wanted to be a computer
+                    programmer.&nbsp;
+                </span>
+            </p>
+            <p class="p1">
+                <br>
+            </p>
+            <p class="p1">
+                <span class="s1" style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    "I've always wanted to be a computer programmer, but my programming classes
+                    had awkward atmospheres where I was the only girl in the room. I excitedly
+                    applied to Girls Who Code, hoping to be in a classroom different from what
+                    I was used to; full of girls with similar ideals that would lovingly support
+                    and empower each other. Needless to say, my dreams were more than fulfilled.
+                    Not only was I placed in an encouraging and friendly environment, I met
+                    inspiring women in the field, learned about incredible future innovations,
+                    but most importantly I learned about my potential to achieve my dreams
+                    while making a difference."
+                </span>
+            </p>
+            <p class="p1">
+                <span class="s1" style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    <br>
+                </span>
+            </p>
+            <p class="p1">
+                <span style="text-decoration: underline;" data-mce-style="text-decoration: underline;">
+                    <span class="s1" style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                        Asia Burrell:
+                    </span>
+                </span>
+            </p>
+            <p>
+                <br>
+            </p>
+            <p class="p1">
+                <span class="s1" style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    "I am a passion driven high school student with an ambition for computer
+                    science, robotics, and entrepreneurship, which is the reason I am going
+                    to a&nbsp;specialized&nbsp;technical high school. I want to revolutionize
+                    the world&nbsp;through innovation and encourage young women, like myself,
+                    to pursue careers in STEM and close the unacceptable gender gap in these
+                    fields. Girls Who Code is a great opportunity for this and building&nbsp;communication
+                    and network skills while being mentored by the industry's top female engineers."﻿
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    <strong>
+                        <span style="text-decoration: underline;" data-mce-style="text-decoration: underline;">
+                            Contact Us:
+                        </span>
+                    </strong>
+                    <br>
+                    <br>
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    Tiffany Xiao:&nbsp;
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    email:
+                    <a href="mailto:txiao8415@bths.edu">
+                        txiao8415@bths.edu
+                    </a>
+                    &nbsp;
+                    <span data-mce-type="bookmark" id="mce_0_start" data-mce-style="overflow:hidden;line-height:0px"
+                    style="overflow:hidden;line-height:0px">
+                        ﻿
+                    </span>
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                </span>
+            </p>
+        </div>
+        <a target="_blank" href="https://www.linkedin.com/in/tiffanyxiao" data-icon="star"
+        data-iconpos="left" class="ui-btn ui-btn-a ui-icon-star ui-btn-icon-left">
+            Tiffany's Linked In
+        </a>
+        <div data-controltype="textblock">
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                    Asia Burrell:
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;">
+                    email:&nbsp;
+                    <a href="mailto:aburrell9833@bths.edu">
+                        aburrell9833@bths.edu
+                    </a>
+                </span>
+            </p>
+            <p>
+                <span style="font-family: 'book antiqua', palatino;" data-mce-style="font-family: 'book antiqua', palatino;">
+                </span>
+            </p>
+        </div>
+        <a href="https://www.linkedin.com/profile/view?id=435196267&authType=NAME_SEARCH&authToken=ieCH&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A435196267%2CauthType%3ANAME_SEARCH%2Cidx%3A1-1-1%2CtarId%3A1439562120205%2Ctas%3Aasi" data-icon="star" data-iconpos="left" class="ui-btn ui-btn-b ui-icon-star ui-btn-icon-left">
+            Asia's Linked In
+        </a>
+    </div>
+    <div data-role="tabbar" data-iconpos="top" data-theme="a">
+        <ul>
+            <li>
+                <a href="#about" data-transition="fade" data-theme="" data-icon="info">
+                    About
+                </a>
+            </li>
+            <li>
+                <a href="#home" data-transition="fade" data-theme="" data-icon="home">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="#page4" data-transition="fade" data-theme="" data-icon="plus">
+                    Add
+                </a>
+            </li>
+        </ul>
     </div>
 </div>
 </body>
