Questionnaire form added

--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
         <h1 class="ui-title">
             CONNECTIONS
         </h1>
+        <a href="#home" data-icon="arrow-l" data-iconpos="left" class="ui-btn ui-btn-left ui-icon-arrow-l ui-btn-icon-left">
+            Back
+        </a>        
     </div>
     <div role="main" class="ui-content">
         <div class="ui-field-contain" data-controltype="camerainput">
@@ -323,6 +326,9 @@
         <a href="#page4" data-icon="star" data-iconpos="left" class="ui-btn ui-btn-c ui-icon-star ui-btn-icon-left">
             Tutorial
         </a>
+        <a href="https://docs.google.com/forms/d/1zkbUm3vR2uvIIPKkqEkxNII-r70r8lYFUb9oc6_4oA0/viewform?usp=send_form" data-icon="alert" data-iconpos="left" class="ui-btn  ui-icon-alert ui-btn-icon-left">
+            Send a Question to Us
+        </a>        
         <div data-controltype="textblock">
             <p>
                 <strong>
